# graduation_project

./: CMakeLists.txt  README.md  main.cpp  run.sh
assets/: config.txt  framingham.csv  para.txt
cpp/: Com.cpp  Data.cpp  LogisticRegression.cpp  PostOffice.cpp  nodes.cpp  scheduler.cpp  server.cpp  worker.cpp
header/: Com.h  Data.h  Dis.h  LogisticRegression.h  PostOffice.h  Tools.h  nodes.h  scheduler.h  server.h  worker.h
